IOS validate 7 v2 protocol + Add body parser middleware * Refactor ios 7 validataion code + Add http post request handler as v2 protocol
